updated lab book todo list with caspers comments

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -483,7 +483,10 @@ Here I check how frequently SNPs that are homozygous in a mother are heterozygou
 
 \section{TO DO}
 \begin{itemize}
-
+\item change the n parameter in cstacks to M+-1 (probably 3 is best)
+\item save plots with n=1 just in case (maybe?)
+\item try splitting by ploidy with observed homozygosity instead of inbreeding coefficient
+\item prepare presentation for the 12th
 \item subset very confident individuals (top x\% high hom and high het) and find set of loci always CSD-like in these.
 \item use these loci to classify ambiguous individuals
 \item Visualize average heterozygosity (or allele frequency) at each SNPs in offpring versus in mother to assess transmission bias (hom SNPs in mothers more often het in offspring or reversse). 
