scripts ready for whole-pipeline run, working on figures for presentation

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -482,6 +482,14 @@ Solution: I re-ran the explo assoc script used to generate figure \ref{SNPs_expl
 \subsection{Transmission bias}
 
 Here I check how frequently SNPs that are homozygous in a mother are heterozygous in its offspring and vice versa.
+(to be continued)
+
+\chapter{Association mapping}
+
+Date: 05.07.2017
+
+Now that the data is cleaner, I will start with the association mapping. Casper provided me the genome with the contigs ordered by chromosomes (but not oriented?) he obtained with his linkage map. I will use this as the new reference genome and run the pipeline all the way from the mapping with it.
+
 
 \section{TO DO}
 \begin{itemize}
