Pop_FST_per_fam now removes haploids before running populations

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -522,6 +522,9 @@ I ran the whole pipeline on the ordered genome. Here are all statistics associat
 
 \FloatBarrier
 
+\section{Coarse analyses}
+Before running any association mapping analysis, I will blacklist loci that are homozygous in mothers and individuals that are defined as haploids with m2 homozygosity threshold from the populations analysis and rerun it.
+
 \section{TO DO}
 \begin{itemize}
 \item change the n parameter in cstacks to M+-1 (probably 3 is best)
